--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # 全局 API 地址
 # VITE_GLOBAL_API="http://localhost:6688"
-VITE_GLOBAL_API="https://dailyhotapi.onrender.com/"
+VITE_GLOBAL_API="https://dailyhotapi-v2-0-0-rc-1.onrender.com"
 
 # ICP 备案号
 #VITE_ICP = "豫ICP备2022018134号-1"
